--- a/EYES-OF-LIFE/src/components/Footer/Footer.css
+++ b/EYES-OF-LIFE/src/components/Footer/Footer.css
@@ -2,11 +2,13 @@
 .footer {
   background-color: #b6bec7;
   color: #ecf0f1;
-  padding: 20px;
+
   text-align: center;
-  position: fixed;
-  bottom: 0;
-  width: 100%;
+
+  margin-top: 100%;
+
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 @media (max-width: 600px) {
