--- a/EYES-OF-LIFE/src/components/Header/Header.css
+++ b/EYES-OF-LIFE/src/components/Header/Header.css
@@ -27,6 +27,18 @@
     margin-left: 10px;
     cursor: pointer;
   }
+
+  /* Header.css */
+.app-bar-container {
+  display: flex;
+  align-items: center;
+}
+
+.app-logo {
+  width: 5%; /* Ajusta el tamaño según tus necesidades */
+  margin-right: 948px; /* Coloca el logo a la derecha */
+}
+
   
   .app-button:hover {
     background-color: #2980b9;
@@ -39,7 +51,7 @@
   
     .button-container {
       flex-direction: column;
-      align-items: flex-end;
+      align-items: flex-start;
     }
   
     .app-button {
