--- a/EYES-OF-LIFE/src/components/Header/Header.css
+++ b/EYES-OF-LIFE/src/components/Header/Header.css
@@ -1,62 +1,35 @@
-/* AppBar.css */
-.app-bar {
-    background-color: #accdee;
-    color: #ecf0f1;
-    padding: 10px 20px;
-  }
-  
-  .app-bar-container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-  
-  h1 {
-    margin: 0;
-  }
-  
-  .button-container {
-    display: flex;
-  }
-  
-  .app-button {
-    background-color: #3498db;
-    color: #ecf0f1;
-    border: none;
-    padding: 8px 12px;
-    margin-left: 10px;
-    cursor: pointer;
-  }
-
-  /* Header.css */
+/* Header.css */
 .app-bar-container {
   display: flex;
-  align-items: center;
+  justify-content: space-between;
+  align-items: center; /* Centra verticalmente los elementos */
+  padding: 10px;
 }
 
 .app-logo {
-  width: 5%; /* Ajusta el tamaño según tus necesidades */
-  margin-right: 948px; /* Coloca el logo a la derecha */
+  max-width: 100px; /* Ajusta el tamaño de la imagen según sea necesario */
+  height: auto;
+  margin-right: 800px; /* Añade un margen derecho para separar el logo de los demás elementos */
 }
 
-  
-  .app-button:hover {
-    background-color: #2980b9;
+.button-container {
+  display: flex;
+  gap: 10px;
+}
+
+.app-button {
+  padding: 10px 15px;
+  font-size: 14px;
+}
+
+/* Media Queries para pantallas más pequeñas (ajusta según tus necesidades) */
+@media (max-width: 768px) {
+  .app-bar-container {
+    flex-direction: column;
+    align-items: center;
   }
-  
-  @media (max-width: 600px) {
-    .app-bar {
-      padding: 10px;
-    }
-  
-    .button-container {
-      flex-direction: column;
-      align-items: flex-start;
-    }
-  
-    .app-button {
-      margin-top: 5px;
-      margin-left: 0;
-    }
+
+  .button-container {
+    margin-top: 10px;
   }
-  
+}
