--- a/EYES-OF-LIFE/src/pages/Home/Home.css
+++ b/EYES-OF-LIFE/src/pages/Home/Home.css
@@ -1,8 +1,8 @@
 
 .home-container {
   text-align: center;
-  padding: 12%;
-  background-color: #3498db;
+  padding: 13%;
+  background-color: #fffedbe7 ;
   color: #ecf0f1;
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -28,6 +28,6 @@ p {
 
 @media (max-width: 600px) {
   .home-container {
-    padding: 30px;
+    padding: 109px;
   }
 }
