--- a/EYES-OF-LIFE/src/pages/ProfilePhotographer/ProfilePhotographer.css
+++ b/EYES-OF-LIFE/src/pages/ProfilePhotographer/ProfilePhotographer.css
@@ -1,37 +1,55 @@
-/* ProfilePhotographer.css */
-
-html, body {
-  height: 100%;
-  margin: 0;
-  padding: 0;
-}
 
 body {
   font-family: Arial, sans-serif;
   background-color: #f2f2f2;
-  color: #333;
+  color: rgb(2, 80, 158);
+  display: flex;
 }
 
 .profile-container {
-  max-width: 800px;
-  margin: 0 auto;
+  display: contents;
   padding: 20px;
+  align-items: center;
+  background-color: #f2efce;
 }
 
-.profile-content {
-  text-align: center;
+.additional-info {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  margin-top: 50px;
 }
 
 .profile-image {
   width: 150px;
   border-radius: 50%;
-}
-
-.profile-name {
-  margin-bottom: 10px;
+  margin: 0 auto;
 }
 
 .profile-description {
   font-size: 16px;
-  line-height: 1.5;
+  line-height: 1;
+}
+
+.personal-info {
+  margin-top: 50px;
+  text-align: center;
+}
+
+.info-box {
+  border: 1px solid #e8d129;
+  padding: 15px;
+  background-color: #f5f1a9;
+  margin-bottom: 20px;
+
+}
+
+.info-box h2 {
+  color: rgb(3, 60, 117);
+  margin-bottom: 10px;
+}
+
+.info-box p {
+  color: rgb(77, 139, 232);
+  font-size: 20px;
 }
