--- a/EYES-OF-LIFE/src/pages/Home/Home.css
+++ b/EYES-OF-LIFE/src/pages/Home/Home.css
@@ -1,80 +1,57 @@
-@media (min-width: 961px) {
 .home-container {
-    position: relative;
-    text-align: center;
-  }
-  
+  text-align: center;
+}
+
+.welcome-container {
+  color: navy;
+  font-size: 3rem;
+  margin-bottom: 2rem;
+}
+
+.eyes-of-life-container,
+.galleries-container {
+  margin: 2rem auto;
+  max-width: 800px;
+}
+
+.eyes-of-life-container {
+  background-color: #f9f0d3;
+  color: blue;
+  border-radius: 15px;
+  padding: 20px;
+}
+
+.galleries-container {
+  background-color: #f9f0d3e5;
+  color: blue;
+  padding: 20px;
+}
+
+.galleries-container h2 {
+  margin-bottom: 1rem;
+}
+
+.column {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 1rem;
+}
+
+.column img {
+  width: 100%;
+  max-width: 400px;
+  border-radius: 8px;
+}
+
+@media (min-width: 768px) {
   .welcome-container {
-    color: navy;
-    font-size: 65px;
-    position: absolute;
-    top: 70%; 
-    left: 32%;
-    text-align: center;
-  }
-
-  .line-under {
-    border-bottom: 3px solid navy;
-    margin-bottom: -2px;
-    
-    
-  }
-  
-  .eyes-of-life-container {
-    position: absolute;
-    font-size: 30px;
-    top: 510px;
-    left: 250px;
-    width: 25%;
-    padding: 20px;
-    background-color: #f9f0d3;
-    color: blue;
-    border-radius:15px;
-    max-width: 500px;
-  }
-
-  .galleries-container {
-    position: absolute;
-    font-size: 30px;
-    top: 790px; 
-    right: 250px; 
-    transform: translate(0, -50%);
-    padding: 20px;
-    background-color: #f9f0d3e5;
-    color: blue;
-    width: 200%;
-    max-width: 500px;
-    text-align: center;
-    display: grid;
-    grid-template-columns: 2fr;
-    grid-gap: 15px;
-  }
-
-  .galleries-container .column {
-    display: flex;
-    flex-direction: row;
-    align-items: center;  
-    justify-content: center;
-    flex-wrap: wrap;
-    gap: 18px;
-  }
-  
-  .galleries-container .column img {
-    width: 48%;
-    margin-bottom: 17px; 
-  }
-  
-  @media (min-width: 768px) and (max-width: 991px) {
-  .welcome-container {
-    font-size: 45px;
-    top: 50%;
-    left: 40%;
-  }
-
-  .galleries-container {
-    width: 50%;
-    right: 50%;
-    transform: translate(-50%, -50%);
+    font-size: 2.5rem;
   }
 }
+
+@media (min-width: 992px) {
+  .column img {
+    width: 48%;
+  }
 }
