--- a/EYES-OF-LIFE/src/pages/MyDates/MyDates.css
+++ b/EYES-OF-LIFE/src/pages/MyDates/MyDates.css
@@ -1,84 +1,87 @@
-/* MyDates.css */
-
 body {
-    font-family: 'Arial', sans-serif;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-    background-color: #fffedbc1;
-  }
-  
+  font-family: 'Arial', sans-serif;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  background-color: #fffedbc1;
+}
 
-  
-  .my-dates-container {
-    display: flex;
-    justify-content: space-around;
-    align-items: flex-start;
-    padding: 20px;
-  }
-  
-  .appointment-form {
-    margin-top: 100px;
-    max-width: 400px;
-    width: 100%;
-    margin-right: 20px;
-  }
-  
-  form {
-    display: flex;
-    flex-direction: column;
-  }
-  
-  label {
-    margin: 10px 0;
-  }
-  
-  input,
-  select,
-  button {
-    padding: 10px;
-    margin-bottom: 15px;
-  }
-  
-  button {
-    background-color: #FFFEDB;
-    color: #0E3863;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    font-size: 18px;
-    transition: background-color 0.3s ease;
-  }
-  
-  button:hover {
-    background-color: #FFFEDB;
-  }
-  
-  .calendar {
-    margin-top: 100px;
-    max-width: 700px;
-    width: 100%;
-  }
-  
-  .calendar-table {
-    width: 100%;
-    border-collapse: collapse;
-    margin-top: 20px;
-  }
-  
-  .calendar th, .calendar td {
-    border: 1px solid #000000;
-    padding: 10px;
-    text-align: center;
-  }
-  
-  .calendar th {
-    background-color: #e98f7d;
-  }
-  
-  td.booked {
-    background-color: #ef9e9d; /* Color para citas reservadas */
-  }
+.my-dates-container {
+  display: flex;
+  width: 70%;
+  flex-wrap: wrap;
+  justify-content:space-between;
+  align-items: flex-start;
+  padding: 20px;
+
+}
+
+
+.appointment-form {
+  margin-top: 20px; 
+  max-width: 400px;
+  width: 100%;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+}
+
+label {
+  margin: 10px 0;
+}
+
+input,
+select,
+button {
+  padding: 10px;
+  margin-bottom: 15px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+button {
+  background-color: #FFFEDB;
+  color: #0E3863;
+  border: none;
+  cursor: pointer;
+  font-size: 18px;
+  transition: background-color 0.3s ease;
+}
+
+button:hover {
+  background-color: #fbd081; /* Ajustado para un color más atractivo */
+}
+
+
+
+.calendar {
+  margin-top: 20px; /* Reducido para un mejor espacio */
+  max-width: 700px;
+  width: 100%;
+}
+
+.calendar-table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 20px;
+}
+
+.calendar th,
+.calendar td {
+  border: 1px solid #000000;
+  padding: 10px;
+  text-align: center;
+}
+
+.calendar th {
+  background-color: #e98f7d;
+}
+
+td.booked {
+  background-color: #ef9e9d; /* Color para citas reservadas */
+}
   
