--- a/EYES-OF-LIFE/src/pages/MyEvents/MyEvents.css
+++ b/EYES-OF-LIFE/src/pages/MyEvents/MyEvents.css
@@ -8,6 +8,9 @@ html, body, #root {
     flex-direction: column;
     align-items: center;
   }
+  header{
+    width: 100%;
+  }
  
 
 .evento-container {
