--- a/EYES-OF-LIFE/src/pages/EventsImages/EventsImages.css
+++ b/EYES-OF-LIFE/src/pages/EventsImages/EventsImages.css
@@ -1,5 +1,5 @@
 body, html {
-  margin: auto;
+  margin: 0;
   padding: 0;
   font-family: Arial, sans-serif;
   overflow: hidden;
@@ -10,16 +10,22 @@ body, html {
   flex-direction: column;
   align-items: center;
   padding: 25px;
-  position: relative;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  margin: 20px auto;
+  width: 100%;
+  height: 100%;
 }
 
 .image-row {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-around;
+  align-items: center;
   width: 100%;
+  height: 25%;
   margin-top: 20px;
   background-color: antiquewhite;
-  margin-bottom: 70px;
   border-radius: 10px;
   overflow: hidden;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -31,7 +37,6 @@ body, html {
 }
 
 .image-item img {
-  text-align: center;
   width: 100%;
   border-radius: 10px;
 }
@@ -52,17 +57,9 @@ body, html {
   color: #3498db;
 }
 
-.navigation-arrows-first-row {
+.navigation-arrows-first-row, .navigation-arrows-second-row {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-top: 10px; 
-}
-
-/* Estilos específicos para las flechas de la segunda fila */
-.navigation-arrows-second-row {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-top: 5px;
+  margin-top: 10px;
 }
