--- a/EYES-OF-LIFE/src/pages/MyEvents/MyEvents.css
+++ b/EYES-OF-LIFE/src/pages/MyEvents/MyEvents.css
@@ -29,6 +29,7 @@ html, body, #root {
     position: relative; 
     margin-bottom: 150px;
     margin: 25px;
+    margin-top: 100px;
 }
 
 .evento h2{
@@ -37,9 +38,15 @@ html, body, #root {
 
 .evento img {
     width: 100%;
-    max-height: 270px; 
-    border-radius: 100px;
+    max-height: 300px;
+    min-height: 300px;
+    max-width: 300px; 
+    min-width: 300px;
+    border-radius: 15px; 
     margin-top: 20px;
+    transition: opacity 0.3s ease;
+    object-fit: cover;
+    overflow: hidden;
 }
 
 .ver-galeria {
@@ -52,6 +59,10 @@ html, body, #root {
     color: #3498db;
 }
 
+.evento:hover img {
+    opacity: 0.3; 
+  }
+
 .evento:hover .ver-galeria {
     color: #3498db;
 }
@@ -61,3 +72,25 @@ html, body, #root {
     margin-bottom: 5px; 
     font-size: 30px; 
 }
+
+.hover-text{
+    opacity: 0;
+    transform: translateY(10px);
+    transition: opasity 0.3s ease, transform 0.3s ease;
+    position: absolute;
+    bottom: 10px;
+    transform: translateX(-50%);
+    text-align: center;
+    color:rgb(4, 30, 146)
+}
+
+.evento:hover .hover-text {
+    opacity: 1;
+    transform: translateY(0);
+  }
+
+  .image-item.active {
+    border: 2px solid #3498db; /
+  }
+
+  
