--- a/EYES-OF-LIFE/src/pages/MyEvents/MyEvents.css
+++ b/EYES-OF-LIFE/src/pages/MyEvents/MyEvents.css
@@ -38,12 +38,12 @@ html, body, #root {
 
 .evento img {
     width: 100%;
-    max-height: 300px;
-    min-height: 300px;
-    max-width: 300px; 
-    min-width: 300px;
-    border-radius: 15px; 
-    margin-top: 20px;
+    max-height: 370px;
+    min-height: 370px;
+    max-width: 600px; 
+    min-width: 600px;
+    border-radius: 20px; 
+    margin-top: 9px;
     transition: opacity 0.3s ease;
     object-fit: cover;
     overflow: hidden;
@@ -55,7 +55,7 @@ html, body, #root {
     bottom: 5px; 
     left: 50%; 
     transform: translateX(-50%); 
-    text-decoration: none;
+    transition: color 0.3s ease;
     color: #3498db;
 }
 
@@ -70,7 +70,7 @@ html, body, #root {
 .ver-galeria::before {
     content: '\2192'; 
     margin-bottom: 5px; 
-    font-size: 30px; 
+    font-size: 25px; 
 }
 
 .hover-text{
