Wittget, login y upload created

--- a/EYES-OF-LIFE/src/pages/MyGalery/MyGalery.css
+++ b/EYES-OF-LIFE/src/pages/MyGalery/MyGalery.css
@@ -2,4 +2,8 @@
     text-align: center;
     margin-top: 20px; /* Ajusta el margen superior según sea necesario */
   }
+
+.button{
+  margin-left: 80%;
+}
   
