--- a/EYES-OF-LIFE/src/pages/MyEvents/MyEvents.css
+++ b/EYES-OF-LIFE/src/pages/MyEvents/MyEvents.css
@@ -1,96 +1,52 @@
-html, body, #root {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    overflow: auto;
-    height: 100%;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  header{
-    width: 100%;
-  }
- 
-
 .evento-container {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
     margin: 20px;
-}
-
-.evento {
+  }
+  
+  .evento {
     display: flex;
     flex-direction: column;
     align-items: center;
     text-align: top;
-    width: 600px;
-    position: relative; 
-    margin-bottom: 150px;
-    margin: 25px;
-    margin-top: 100px;
-}
-
-.evento h2{
+    /* Ancho dinámico basado en el número de eventos por línea */
+    width: calc(33.33% - 20px);
+    position: relative;
+    margin-bottom: 30px;
+  }
+  
+  .evento h2 {
     margin: 0;
-}
-
-.evento img {
+  }
+  
+  .evento img {
     width: 100%;
-    max-height: 370px;
-    min-height: 370px;
-    max-width: 600px; 
-    min-width: 600px;
-    border-radius: 20px; 
+    height: 335px; /* Establecer una altura fija para todas las imágenes */
+    object-fit: cover;
+    border-radius: 10px;
     margin-top: 9px;
     transition: opacity 0.3s ease;
-    object-fit: cover;
-    overflow: hidden;
-}
-
-.ver-galeria {
-    display: block;
-    position: absolute;
-    bottom: 5px; 
-    left: 50%; 
-    transform: translateX(-50%); 
-    transition: color 0.3s ease;
-    color: #3498db;
-}
-
-.evento:hover img {
-    opacity: 0.3; 
   }
-
-.evento:hover .ver-galeria {
-    color: #3498db;
-}
-
-.ver-galeria::before {
-    content: '\2192'; 
-    margin-bottom: 5px; 
-    font-size: 25px; 
-}
-
-.hover-text{
+  
+  
+  .hover-text {
     opacity: 0;
     transform: translateY(10px);
-    transition: opasity 0.3s ease, transform 0.3s ease;
+    transition: opacity 0.3s ease, transform 0.3s ease;
     position: absolute;
     bottom: 10px;
     transform: translateX(-50%);
     text-align: center;
-    color:rgb(4, 30, 146)
-}
-
-.evento:hover .hover-text {
+    color: rgb(4, 30, 146);
+  }
+  
+  .evento:hover img {
+    opacity: 0.7;
+  }
+  
+  .evento:hover .hover-text {
     opacity: 1;
     transform: translateY(0);
   }
-
-  .image-item.active {
-    border: 2px solid #3498db; /
-  }
-
   
