--- a/EYES-OF-LIFE/src/components/Header/Header.css
+++ b/EYES-OF-LIFE/src/components/Header/Header.css
@@ -1,10 +1,7 @@
-/* Header.css */
-
-
 .app-bar-container {
   display: flex;
   justify-content: space-between;
-  align-items: center; /* Centra verticalmente los elementos */
+  align-items: center;
   padding: 10px;
   background: linear-gradient(180deg, #FAFFC5 0%, #FAFFC5 57%, #EDF7AC 30%, #F6FE9C 35%, #b6bec7 100%);
   border-radius: 10px;
@@ -12,9 +9,9 @@
 }
 
 .app-logo {
-  max-width: 100px; /* Ajusta el tamaño de la imagen según sea necesario */
+  max-width: 100px; 
   height: auto;
-  margin-right: 800px; /* Añade un margen derecho para separar el logo de los demás elementos */
+  margin-right: 800px; 
 }
 
 .button-container {
@@ -27,7 +24,7 @@
   font-size: 14px;
 }
 
-/* Media Queries para pantallas más pequeñas (ajusta según tus necesidades) */
+
 @media (max-width: 768px) {
   .app-bar-container {
     flex-direction: column;
