--- a/EYES-OF-LIFE/src/pages/ProfileUser/MyDatesUser/MyDatesUser.css
+++ b/EYES-OF-LIFE/src/pages/ProfileUser/MyDatesUser/MyDatesUser.css
@@ -5,22 +5,22 @@
   background-color: transparent; /* Fondo transparente */
 }
 
-h2 {
+.my-dates-container h2 {
   font-size: 28px;
   margin-bottom: 20px;
 }
 
-.form-group {
+.my-dates-container .form-group {
   margin-bottom: 20px;
 }
 
-label {
+.my-dates-container label {
   display: block;
   font-size: 18px;
   margin-bottom: 10px;
 }
 
-input[type="text"] {
+.my-dates-container input[type="text"] {
   width: 100%;
   padding: 12px;
   font-size: 18px;
@@ -29,14 +29,48 @@ input[type="text"] {
   box-sizing: border-box;
 }
 
-.my-dates-container button {
+.my-dates-container .custom-button {
   background-color: #4caf50;
   color: #fff;
   border: none;
   padding: 12px 24px;
-  font-size: 18px;
+  font-size: 20px;
   cursor: pointer;
   border-radius: 6px;
+}
+
+.my-dates-container .appointment button {
+  background-color: #e74c3c;
+  color: #fff;
+  border: none;
+  padding: 10px 16px;
+  font-size: 10px;
+  cursor: pointer;
+  border-radius: 6px;
+  margin-top: 8px;
+}
+
+.my-dates-container .button-wrapper {
+  margin-top: 20px;
+}
+
+.my-dates-container .divider {
+  height: 2px;
+  background-color: #ccc;
+  margin: 20px 0;
+}
+
+.my-dates-container .citas-reservadas {
+  margin-top: 20px;
+}
+
+.my-dates-container .appointment {
+  padding: 12px;
+  margin-bottom: 15px;
+}
+
+.my-dates-container .appointment strong {
+  font-weight: bold;
 }
 
 .my-dates-container .appointment button {
@@ -50,40 +84,6 @@ input[type="text"] {
   margin-top: 8px;
 }
 
-.button-wrapper {
-  margin-top: 20px;
-}
-
-.divider {
-  height: 2px;
-  background-color: #ccc;
-  margin: 20px 0;
-}
-
-.citas-reservadas {
-  margin-top: 20px;
-}
-
-.appointment {
-  padding: 12px;
-  margin-bottom: 15px;
-}
-
-.appointment strong {
-  font-weight: bold;
-}
-
-.appointment button {
-  background-color: #e74c3c;
-  color: #fff;
-  border: none;
-  padding: 10px 16px;
-  font-size: 16px;
-  cursor: pointer;
-  border-radius: 6px;
-  margin-top: 8px;
-}
-
-.appointment button:hover {
+.my-dates-container .appointment button:hover {
   background-color: #c0392b;
 }
