estilado home en proceso

--- a/EYES-OF-LIFE/src/pages/AboutUs/AboutUs.css
+++ b/EYES-OF-LIFE/src/pages/AboutUs/AboutUs.css
@@ -67,7 +67,7 @@ body {
 }
 
 .member-info {
-  background-color: #f9f0d3;
+  background-color: #f9f0d3e5;
   padding: 20px;
   border-radius: 0 0 10px 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
