--- a/EYES-OF-LIFE/src/pages/Home/Home.css
+++ b/EYES-OF-LIFE/src/pages/Home/Home.css
@@ -1,57 +1,78 @@
-.home-container {
-  text-align: center;
+/* Estilo general */
+body, html {
+  height: 100%;
+  margin: 0;
 }
 
+/* Contenedor principal */
+.home-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 50vh; /* Ocupa el 100% del alto de la ventana */
+  max-width: 100vw; /* Ocupa el 100% del ancho de la ventana */
+  padding: 410px;
+  text-align: center;
+  background-color: #f9f0d3e5;
+}
+
+/* Estilos del contenedor "Eyes of Life" */
+.eyes-of-life-container {
+  border-radius: 15px;
+  
+  background-color: #f9f0d3e5;
+  color: blue;
+  /* Ajusta el margen superior según sea necesario */
+}
+
+/* Estilo del logo de Eyes of Life */
+.eyes-of-life-logo {
+  max-width: 100%;
+  margin-top: -100px; /* Ajusta el margen superior según sea necesario */
+}
+
+/* Estilos del contenedor de bienvenida */
 .welcome-container {
   color: navy;
-  font-size: 3rem;
   margin-bottom: 2rem;
 }
 
-.eyes-of-life-container,
-.galleries-container {
-  margin: 2rem auto;
-  max-width: 800px;
+/* Estilos del texto de bienvenida */
+.welcome-container h3, .welcome-container h1 {
+  margin-bottom: 0.5rem;
 }
 
-.eyes-of-life-container {
-  background-color: #f9f0d3;
-  color: blue;
-  border-radius: 15px;
-  padding: 20px;
-}
-
+/* Estilos del contenedor de galerías */
 .galleries-container {
   background-color: #f9f0d3e5;
   color: blue;
-  padding: 20px;
 }
 
-.galleries-container h2 {
-  margin-bottom: 1rem;
-}
+/* Estilos del encabezado de las galerías */
 
+
+/* Estilos de las columnas de imágenes */
 .column {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
-  gap: 1rem;
+  gap: 10px;
+  justify-content: space-between;
 }
 
+/* Estilos de las imágenes en las columnas */
 .column img {
-  width: 100%;
-  max-width: 400px;
+  width: calc(33.333% - 10px); /* Para que haya 3 imágenes por fila */
+  height: 150px;
+  object-fit: cover;
   border-radius: 8px;
+  margin-bottom: 10px;
 }
 
+/* Estilos responsivos */
 @media (min-width: 768px) {
   .welcome-container {
     font-size: 2.5rem;
   }
 }
 
-@media (min-width: 992px) {
-  .column img {
-    width: 48%;
-  }
-}
