--- a/EYES-OF-LIFE/src/pages/MyDates/MyDates.css
+++ b/EYES-OF-LIFE/src/pages/MyDates/MyDates.css
@@ -12,35 +12,34 @@ body {
 .my-dates-container {
   display: flex;
   flex-direction: column;
-  width: 100%;
-  padding: 15px; 
-  margin-top: 15px; 
+  align-items: center;
+  width: 150%;
+  margin: 50px auto;
+  padding: 15px;
 }
 
-
 .appointment-form {
-  display:contents;
-  width: 100%;
-  margin-bottom: 10px;
+  width: 80%;
+  margin-bottom: 20px;
+
 }
 
 .appointment-form input,
 .appointment-form select {
-  margin-bottom: 2px;
-  padding: 10px;
+  margin-bottom: 10px;
+  padding: 15px;
   border: 3px solid #ccc;
   border-radius: 15px;
-  font-size: 20px;
+  font-size: 18px;
 }
 
-.form-group-calendar{
+.form-group-calendar {
   display: flex;
-  flex-direction: row;
-  margin-top: -22%;
+  flex-direction: column;
   align-items: center;
-  font-size: 35px;
+  font-size: 30px;
+  margin-top: 5%;
   width: 100%;
-  
 }
 
 input,
@@ -64,9 +63,10 @@ button:hover {
   background-color: #fbd081;
 }
 
-.form-group{
+.form-group {
   width: 100%;
-  margin-top:-25px;
+  margin-top: 25px;
+  
 }
 
 .citas-reservadas {
@@ -74,20 +74,19 @@ button:hover {
   flex-wrap: wrap;
   justify-content: center;
   max-width: 1200px;
-  width: 100%;
-  
+  margin: 50px auto;
 }
 
 .citas-reservadas h2 {
   width: 100%;
   text-align: center;
-  font-size: 60px;
-  margin-bottom: 30px;
+  font-size: 40px;
+  margin-bottom: 20px;
 }
 
 .appointment {
   width: calc(35.33% - 20px);
-  margin: 50px 10px 100px;
+  margin: 20px 10px;
   text-align: center;
 }
 
@@ -97,13 +96,13 @@ button:hover {
 }
 
 .cita-reservada p {
-  font-size: 20px;
+  font-size: 18px;
 }
 
 .appointment strong {
-  font-size: 25px;
+  font-size: 20px;
 }
 
 .appointment div {
-  font-size: 23px;
+  font-size: 18px;
 }
