--- a/EYES-OF-LIFE/src/pages/MyDates/MyDates.css
+++ b/EYES-OF-LIFE/src/pages/MyDates/MyDates.css
@@ -25,6 +25,68 @@ body {
 }
 
 
+/* Estilos para los botones */
+#event,
+#pack {
+  position: relative;
+  overflow: hidden;
+  padding: 10px;
+  border: none; /* Cambiado de 1px solid #ccc a none */
+  border-radius: 30px;
+  background: white;
+  cursor: pointer;
+}
+
+/* Estilos para las flechas dentro de los botones */
+#event::after,
+#pack::after {
+  content: "▼";
+  margin-left: 5px;
+}
+
+/* Estilos para ocultar visualmente el texto pero mantener accesibilidad */
+#event select,
+#pack select {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 0; /* Cambiado de 100% a 0 */
+  opacity: 0;
+  cursor: pointer;
+}
+
+/* Estilos para los elementos de la lista desplegable */
+#event select option,
+#pack select option {
+  position: absolute;
+  left: -9999px;
+}
+
+/* Añadimos un contenedor extra para ajustar el diseño */
+.select-container {
+  display: flex;
+  flex-direction: column;
+}
+
+/* Alineamos las flechas con el contenido del contenedor */
+.select-container::before {
+  content: "";
+  display: inline-block;
+  height: 100%;
+  vertical-align: middle;
+}
+
+/* Alineamos el texto y la flecha verticalmente */
+.select-container span {
+  display: inline-block;
+  vertical-align: middle;
+}
+
+
+
+
+
 
 .appointment-form input,
 .appointment-form select {
