--- a/EYES-OF-LIFE/src/pages/ProfilePhotographer/ProfilePhotographer.css
+++ b/EYES-OF-LIFE/src/pages/ProfilePhotographer/ProfilePhotographer.css
@@ -4,28 +4,38 @@ body {
   font-family: Arial, sans-serif;
   background-color: #f5f5f5;
   margin-bottom: 100px;
+  overflow-y: 0;
+  
 }
 
 .container {
   display: flex;
   flex-direction: column;
   align-items: center;
-  min-height: 100vh;
+  height: 100vh;
 }
 
 .profile-container {
   display: flex;
-  justify-content: flex-start;
-  align-items: flex-start;
-  flex-wrap: wrap;
-  max-height: calc(100vh - 40px);
-  margin-top: 250px;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 50px;
+}
+
+.left-top-section {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+.left-column {
+  text-align: center;
 }
 
 .right-section {
   max-width: 100%;
-  margin-right: 10px;
-  margin-left: 400px; /* Ajusta este valor según tus preferencias */
+  margin-top: 20px;
+  text-align: center;
 }
 
 .info-box.skills {
@@ -97,4 +107,9 @@ body {
 
 .info-box p {
   color: rgb(48, 131, 179);
+}
+
+.contact-info,
+.info-box {
+  margin: 20px 0;
 }
