--- a/EYES-OF-LIFE/src/pages/ProfileUser/ProfileUser.css
+++ b/EYES-OF-LIFE/src/pages/ProfileUser/ProfileUser.css
@@ -1,6 +1,13 @@
 .cardContainer {
   background-color: #f0f0f0;
-  margin:20px;
-  padding: 15px;
+  margin:10px;
+  padding: 25px;
   border-radius: 10px;
+
+}
+.card{
+  width:400px;
+  margin: 2px;
+  margin: 20px;
+  
 }
