--- a/EYES-OF-LIFE/src/pages/ProfileUser/MyDatesUser/MyDatesUser.css
+++ b/EYES-OF-LIFE/src/pages/ProfileUser/MyDatesUser/MyDatesUser.css
@@ -1,76 +1,44 @@
 .my-dates-container {
-  max-width: 800px;
-  margin: 0 auto;
-  padding: 20px;
-  background-color: transparent; /* Fondo transparente */
-}
-
-.my-dates-container h2 {
-  font-size: 28px;
-  margin-bottom: 20px;
-}
-
-.my-dates-container .form-group {
-  margin-bottom: 20px;
-}
-
-.my-dates-container label {
-  display: block;
-  font-size: 18px;
-  margin-bottom: 10px;
-}
-
-.my-dates-container input[type="text"] {
   width: 100%;
-  padding: 12px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.my-dates-container .appointment-table {
+  width: 80%; /* Ajusta el ancho de la tabla según tus preferencias */
+  margin: 20px auto; /* Centrar la tabla */
+  border-collapse: collapse;
+}
+
+.my-dates-container .appointment-table th,
+.my-dates-container .appointment-table td {
+  border: 2px solid #fff; /* Borde blanco */
+  padding: 18px;
+  text-align: center;
+}
+
+.my-dates-container .appointment-table th {
+  background-color: #caa841b4;
+  color: white;
+}
+
+.my-dates-container .appointment-table tr:hover {
+  background-color: #f5f5f5;
+}
+
+.my-dates-container .appointment .table-cell {
   font-size: 18px;
+}
+
+.my-dates-container .appointment select {
+  width: 100%;
+  padding: 8px;
+  font-size: 16px;
   border: 1px solid #ccc;
   border-radius: 6px;
   box-sizing: border-box;
-}
-
-.my-dates-container .custom-button {
-  background-color: #4caf50;
-  color: #fff;
-  border: none;
-  padding: 12px 24px;
-  font-size: 20px;
-  cursor: pointer;
-  border-radius: 6px;
-}
-
-.my-dates-container .appointment button {
-  background-color: #e74c3c;
-  color: #fff;
-  border: none;
-  padding: 10px 16px;
-  font-size: 10px;
-  cursor: pointer;
-  border-radius: 6px;
-  margin-top: 8px;
-}
-
-.my-dates-container .button-wrapper {
-  margin-top: 20px;
-}
-
-.my-dates-container .divider {
-  height: 2px;
-  background-color: #ccc;
-  margin: 20px 0;
-}
-
-.my-dates-container .citas-reservadas {
-  margin-top: 20px;
-}
-
-.my-dates-container .appointment {
-  padding: 12px;
-  margin-bottom: 15px;
-}
-
-.my-dates-container .appointment strong {
-  font-weight: bold;
 }
 
 .my-dates-container .appointment button {
