--- a/EYES-OF-LIFE/src/pages/ProfileUser/GaleryPhotographer/GaleryPhotographer.css
+++ b/EYES-OF-LIFE/src/pages/ProfileUser/GaleryPhotographer/GaleryPhotographer.css
@@ -1,2 +1,46 @@
+.button-containerGalery {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 10px;
+}
 
+.button-containerGalery > * {
+    margin-right: 10px; /* Ajusta el valor según el espacio que desees entre los botones */
+}
 
+.button-containerGalery > *:last-child {
+    margin-right: 0; /* Elimina el margen derecho del último elemento para evitar espacio adicional */
+}
+.photo-grid {
+    display: flex;
+    flex-wrap: wrap;
+    margin: -10px; /* Espacio negativo para compensar el espacio entre las fotos */
+}
+
+.photo-item {
+    flex: 2 0 calc(10.111% - 10px); /* Cada foto ocupa el 33.333% del ancho y tiene un margen de 10px a la derecha e izquierda */
+    margin: 20px;
+    overflow: hidden; 
+}
+
+.photo-item img {
+    width: 100%;
+    height:auto;;
+    display: block;
+    object-fit: cover; /* Ajusta la imagen para cubrir el contenedor sin deformarla */
+    display: block;
+    max-width: 100%; /* Para asegurarse de que la imagen no sea más grande que su contenedor */
+}
+.button-PhotoGrapher2{
+    background-color: rgb(216, 183, 49);
+    font-size: 16px;
+    color: black
+}
+
+.button-Back2{
+    background-color: rgb(216, 183, 49);
+    font-size: 18px;
+    color: black;
+    padding: 15px;
+    text-align: center;
+    }
